INTYGFV-15662: Added functionality that enabled filtering on sysselsattning. Added sysselsattning to populate filter response.